added change and delete api methods, swagger
